--- a/views/landlords/add_review.html
+++ b/views/landlords/add_review.html
@@ -42,6 +42,7 @@
       </div>
   </nav>
     <div class="container mt-4"> 
+      <form action="/">
       <h3 class="text-center p-2"> - Add a new review - </h3>
       <div class="form-group">
         <label for="exampleAddress">Address: </label>
@@ -79,7 +80,8 @@
           <label class="form-check-label" for="inlineRadio3">5</label>
         </div>
 
-        <br><button type="submitReview" class="btn btn-primary mt-4">Submit</button>
+        <br><button type="submit" class="btn btn-primary mt-4">Submit</button>
+      </form>
   </div>
 
 
