--- a/views/landlords/add_review.html
+++ b/views/landlords/add_review.html
@@ -13,14 +13,14 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
-      <a class="navbar-brand" href="map.html" style="font-weight: 900; font-size:30px;">RATE MY LANDLORD</a>
+      <a class="navbar-brand" href="/" style="font-weight: 900; font-size:30px;">RATE MY LANDLORD</a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="map.html">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="add_review.html">New Review</a>
+              <a class="nav-link" href="/landlord/new">New Review</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -60,7 +60,7 @@
       
        <div class="form-group">
         <label for="exampleFormControlSelect1">Overall Satification </label>
-        <select class="form-control" id="exampleFormControlSelect1">
+        <select class="rating" class="form-control" id="exampleFormControlSelect1">
           <option>1</option>
           <option>2</option>
           <option>3</option>
