--- a/views/landlords/add_review.html
+++ b/views/landlords/add_review.html
@@ -42,7 +42,7 @@
       </div>
   </nav>
     <div class="container mt-4"> 
-      <form action="/">
+      <form action="/landlords" method="POST">
       <h3 class="text-center p-2"> - Add a new review - </h3>
       <div class="form-group">
         <label for="exampleAddress">Address: </label>
