--- a/views/landlords/add_review.html
+++ b/views/landlords/add_review.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet"> 
+    <link href="/css/styles.css" rel="stylesheet"> 
     
     
     <title>Rate my Landlord</title>
@@ -11,17 +11,21 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
       <a class="navbar-brand" href="/" style="font-weight: 900; font-size:30px;">RATE MY LANDLORD</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
               <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="/landlords/new">Add Landlord</a>
             </li>
+            
           </ul>
           
         </div>
@@ -29,7 +33,7 @@
   </nav>
     <div class="container mt-4"> 
       <form action="/landlords" method="POST">
-      <h3 class="text-center p-2"> - Add a new review - </h3>
+      <h3 class="text-center p-2"> - Add a new Landlord - </h3>
       <div class="form-group">
         <label for="exampleAddress">Address: </label>
         <input type="text" class="form-control" name="address" aria-describedby="Address" placeholder="Enter Address">
