--- a/views/landlords/foundlords.ejs
+++ b/views/landlords/foundlords.ejs
@@ -3,27 +3,32 @@
 <html>
   <head>
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet"> 
+    <link href="/css/styles.css" rel="stylesheet"> 
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
       <a class="navbar-brand" href="/" style="font-weight: 900; font-size:30px;">RATE MY LANDLORD</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
               <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="/landlords/new">Add Landlord</a>
             </li>
+            
           </ul>
           
         </div>
       </div>
   </nav>
+    
   <style>
     .col-3{
       border: 1px solid black;
@@ -34,8 +39,14 @@
     .col-6{
       border: 1px solid black;
     }
+    body{
+      color: white;
+    }
   </style>
   <div class="container" style="margin-top: 30px; float: center;">
+    <div style="color: black;">
+      <%= lords.length %> results found
+    </div>
     <div class="row">
       <div class="col-3">
         Name
@@ -71,7 +82,7 @@
           <% }) %>
           <div class="col-6" style="border: 1px solid black;">
             <span class="content"><% lord.rating = lord.Total_rating/lord.Total_count %></span>
-            <span class="content"><%= lord.rating %></span>
+            <span class="content"><%= lord.rating.toFixed(1) %></span>
           </div>
         </td>
       </div>
@@ -82,8 +93,6 @@
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqLAmRG0zNVBs_IBTdcIxJvlyXt4B6cM0&callback=initMap"
     async defer></script>
-    <script src="js/gmaps.js"></script>
-    <script src="js/srch_req.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
