modified input boxes

--- a/views/reviews/new.ejs
+++ b/views/reviews/new.ejs
@@ -39,7 +39,7 @@
       </div>
       <div class="form-group">
           <label for="exampleReview">Review: </label>
-          <textarea class="form-control" name="reviewss[text]" rows="8" placeholder="Write your review here!"></textarea>
+          <textarea required class="form-control" name="reviewss[text]" rows="8" placeholder="Write your review here!"></textarea>
         </div>
       
        <div class="form-group">
