--- a/views/landlords/add_review.html
+++ b/views/landlords/add_review.html
@@ -36,16 +36,16 @@
       <h3 class="text-center p-2"> - Add a new Landlord - </h3>
       <div class="form-group">
         <label for="exampleAddress">Address: </label>
-        <input type="text" class="form-control" name="address" aria-describedby="Address" placeholder="Enter Address">
+        <input type="text" class="form-control" name="address" aria-describedby="Address" placeholder="Enter Address" required>
          
       </div>
       <div class="form-group">
         <label for="exampleLandlord">Landlord: </label>
-        <input type="text" class="form-control" name="landlord" placeholder="Landlord's name">
+        <input type="text" class="form-control" name="landlord" placeholder="Landlord's name" required>
       </div>
       <div class="form-group">
           <label for="exampleReview">Review: </label>
-          <textarea class="form-control" name="reviewss[text]" rows="8" placeholder="Write your review here!"></textarea>
+          <textarea class="form-control" name="reviewss[text]" rows="8" placeholder="Write your review here!" required></textarea>
         </div>
       
        <div class="form-group">
