--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,9 +10,10 @@
   font-family: 'Work Sans', sans-serif !important;
 }
 body{
-	background: #159957;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to top, #155799, #159957);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to top, #155799, #159957); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #396afc;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #2948ff, #396afc);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #2948ff, #396afc); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
 height: 100%;
 
 background-repeat: no-repeat;
