--- a/views/landlords/add_review.html
+++ b/views/landlords/add_review.html
@@ -11,7 +11,7 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container">
       <a class="navbar-brand" href="/" style="font-weight: 900; font-size:30px;">RATE MY LANDLORD</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,7 +20,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="/landlords/new">Add Landlord</a>
@@ -32,7 +32,7 @@
       </div>
   </nav>
     <div class="container mt-4"> 
-      <form action="/landlords" method="POST">
+      <form action="/landlords" method="POST" style="color:white">
       <h3 class="text-center p-2"> - Add a new Landlord - </h3>
       <div class="form-group">
         <label for="exampleAddress">Address: </label>
@@ -66,8 +66,8 @@
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqLAmRG0zNVBs_IBTdcIxJvlyXt4B6cM0&callback=initMap"
     async defer></script>
-    <script src="js/gmaps.js"></script>
-    <script src="js/srch_req.js"></script>
+    <script src="/public/js/gmaps.js"></script>
+    <script src="/public/js/srch_req.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
