--- a/views/landlords/foundlords.ejs
+++ b/views/landlords/foundlords.ejs
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container">
       <a class="navbar-brand" href="/" style="font-weight: 900; font-size:30px;">RATE MY LANDLORD</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,7 +17,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/map.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="/landlords/new">Add Landlord</a>
@@ -30,31 +30,23 @@
   </nav>
     
   <style>
-    .col-3{
-      border: 1px solid black;
-    }
-    .content{
-      color: black;
-    }
-    .col-6{
-      border: 1px solid black;
-    }
+  
     body{
       color: white;
     }
   </style>
   <div class="container" style="margin-top: 30px; float: center;">
-    <div style="color: black;">
+    <div style="color:white" class="mb-3">
       <%= lords.length %> results found
     </div>
     <div class="row">
-      <div class="col-3">
+      <div class="col-3 mb-3">
         Name
       </div>
-      <div class="col-3">
+      <div class="col mb-3">
         Address
       </div>
-      <div class="col-6">
+      <div class="col-2 mb-3">
         Rating
       </div>
     </div>
@@ -63,11 +55,11 @@
       <div class="row">
         <td >
           <div class="col-3">
-            <a href="/landlords/<%=lord._id%>"><span class="content"><%=lord.name%></span></a>
+            <a href="/landlords/<%=lord._id%>"><span class="content" style="color:white;"><%=lord.name%></span></a>
           </div>
         </td >
         <td>
-          <div class="col-3" style="border: 1px solid black;">
+          <div class="col" style="">
             <span class="content"><%=lord.location%></span>
           </div>
         </td>
@@ -80,7 +72,7 @@
             <% count++ %>
             <% lord.Total_count = count %>
           <% }) %>
-          <div class="col-6" style="border: 1px solid black;">
+          <div class="col-2" style="">
             <span class="content"><% lord.rating = lord.Total_rating/lord.Total_count %></span>
             <span class="content"><%= lord.rating.toFixed(1) %></span>
           </div>
@@ -93,6 +85,8 @@
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqLAmRG0zNVBs_IBTdcIxJvlyXt4B6cM0&callback=initMap"
     async defer></script>
+    <script src="/public/js/gmaps.js"></script>
+    <script src="js/srch_req.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
