--- a/views/landlords/landlorddd.ejs
+++ b/views/landlords/landlorddd.ejs
@@ -11,7 +11,7 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
       <div class="container">
       <a class="navbar-brand" href="/" style="font-weight: 900; font-size:30px;">RATE MY LANDLORD</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,16 +42,16 @@
   <span class="content"><% landlord.rating = landlord.Total_rating/landlord.Total_count %></span>
 <div class="container"></div>
 <div id="map"></div>
-<div class="container" style="margin-top: 20px;">
+<div class="container mt-4" style="margin-top: 50px;">
   <div class="text-right">
-    <a class="btn btn-success" href="/landlords/<%= landlord._id %>/reviews/new">Add New Review</a>
+    <a class="btn btn-light" href="/landlords/<%= landlord._id %>/reviews/new">Add New Review</a>
   </div>
-  <h3>
+  <h3 style="color: white;">
     See Reviews on <%=landlord.name %> (Rating: <%= landlord.rating.toFixed(1) %>)
   </h3>
 </div>
 
-<div class="container" style="margin-top: 20px;">
+<div class="container pb-4" style="margin-top: 20px;">
   <% landlord.reviews.forEach(function(corse){ %>
       <div class="alert alert-info">
         <%= corse.text %>
@@ -90,6 +90,7 @@
 </script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqLAmRG0zNVBs_IBTdcIxJvlyXt4B6cM0&callback=initMap"
 async defer></script>
+<script src="/public/js/gmaps.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </body>
