--- a/views/landlords/foundlords.ejs
+++ b/views/landlords/foundlords.ejs
@@ -36,18 +36,18 @@
     }
   </style>
   <div class="container" style="margin-top: 30px; float: center;">
-    <div style="color:white" class="mb-3">
+    <div style="color:white" class="pb-2 border-bottom">
       <%= lords.length %> results found
     </div>
-    <div class="row">
+    <div class="row pt-2" style="font-size: 16px; font-weight: 600;">
       <div class="col-3 mb-3">
-        Name
+        NAME
       </div>
       <div class="col mb-3">
-        Address
+        ADDRESS
       </div>
       <div class="col-2 mb-3">
-        Rating
+        RATING
       </div>
     </div>
     <% lords.forEach(function(lord){ %>
