--- a/views/reviews/new.ejs
+++ b/views/reviews/new.ejs
@@ -11,7 +11,7 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container">
       <a class="navbar-brand" href="/" style="font-weight: 900; font-size:30px;">RATE MY LANDLORD</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,7 +30,7 @@
         </div>
       </div>
   </nav>
-    <div class="container mt-4"> 
+    <div class="container mt-4" style="color:white;"> 
       <form action="/landlords/<%=landlord._id%>/reviews" method="POST">
       <h3 class="text-center p-2"> - Add a new review - </h3>
       <div class="form-group">
