--- a/views/map.ejs
+++ b/views/map.ejs
@@ -66,19 +66,47 @@
       </div>
       
     <div id="map"></div>
-    <div class="container">
-      <div class="card-block" id="formatted-address"></div>
-      <div class="card-block" id="address-components"></div>
-      <div class="card-block" id="geometry"></div>
-    </div>
-  
+    <script>
+      function initMap() {
+
+        var map = new google.maps.Map(document.getElementById('map'), {
+              zoom: 8,
+              center: {lat:<%=landlords[0].lat%>,lng:<%=landlords[0].lng%>},
+              scrollwheel: false
+          });
+          var infowindow = new google.maps.InfoWindow({
+            
+          });
+        <% for(var i = 0;i<landlords.length;i++){ %>
+          var lat = <%= landlords[i].lat %>;
+          var lng = <%= landlords[i].lng %>;
+          var center = {lat: lat, lng: lng };
+            
+          
+          var marker = new google.maps.Marker({
+              position: new google.maps.LatLng(lat,lng),
+              map: map
+          });
+          google.maps.event.addListener(marker,'click',(function(marker){
+            return function(){
+              var contentString = `
+            <strong>Name: <%= landlords[i].name %><br />
+            Location: <%= landlords[i].location %><br />
+            </strong>
+          `
+              infowindow.setContent(contentString)
+              infowindow.open(map, marker, contentString)
+            }
+          })(marker))
+          
+        <% } %>
+          
+        }
+    </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqLAmRG0zNVBs_IBTdcIxJvlyXt4B6cM0&callback=initMap"
     async defer></script>
-    <script src="js/gmaps.js"></script>
-    <script src="js/srch_req.js"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="/public/js/gmaps.js"></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </body>
 </html>
