removed API Keys

--- a/views/landlords/foundlords.ejs
+++ b/views/landlords/foundlords.ejs
@@ -83,7 +83,7 @@
   </div>
 
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqLAmRG0zNVBs_IBTdcIxJvlyXt4B6cM0&callback=initMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOURKEY&callback=initMap"
     async defer></script>
     <script src="/public/js/gmaps.js"></script>
     <script src="js/srch_req.js"></script>
