--- a/views/landlords/landlorddd.ejs
+++ b/views/landlords/landlorddd.ejs
@@ -88,7 +88,7 @@
       });
     }
 </script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqLAmRG0zNVBs_IBTdcIxJvlyXt4B6cM0&callback=initMap"
+<script src="https://maps.googleapis.com/maps/api/js?key=YOURKEY&callback=initMap"
 async defer></script>
 <script src="/public/js/gmaps.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
